# gpuv

./: .gitignore  LICENSE  MANIFEST.in  README.md  package-lock.json  pyproject.toml  setup.py
example/: Untitled.ipynb  test_nvml.ipynb
frontend/: package.json
frontend/src/: App.svelte
gpuv/: __init__.py  __main__.py  addTwo.py  cli.py  nvml.py  server.py  subtract.py
gpuv/extras/: __init__.py
gpuv/frontend/: package-lock.json  package.json
gpuv/frontend/src/: app.css
gpuv/frontend/src/lib/GPU/: GpuDashboard.svelte  Line.svelte  SharedLine.svelte
